--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-h1{
-	color: red;
+
+
+body{
+	display: flex;
+	justify-content: right;
+
+}
+
+.background{
+	background: linear-gradient(#e66465, #9198e5);
 }
