--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
-
-
 .sign-up{
 	display: flex;
 	justify-content: right;
-
 }
+
 
 .background{
 	background: linear-gradient(#e66465, #9198e5);
+}
+
+
+button{
+	background: #596D48;
 }
