--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,182 @@
-.sign-up{
-	display: flex;
-	justify-content: right;
+:root{
+    --universal_size--: 20px;
+    --universal_padding--: 40px;
+}
+
+/*FONT*/
+@font-face {
+    font-family: 'Edu TAS Beginner';
+
+    src: url("fonts/EduTASBeginner-VariableFont_wght.woff") format('woff'),
+         url("fonts/EduTASBeginner-Bold.woff") format('woff'),
+         url("fonts/EduTASBeginner-Medium.woff") format('woff'),
+         url("fonts/EduTASBeginner-Regular.woff") format('woff'),
+         url("fonts/EduTASBeginner-SemiBold.woff") format('woff')
+
+    }
+
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    font-family: "Edu TAS Beginner";
+    font-size: var(--universal_size--);
+    overflow: hidden;
+}
+h1{
+    font-size: var(--universal_size--);
+    margin: 0;
+    padding: 0;
 }
 
 
-.background{
-	background: linear-gradient(#e66465, #9198e5);
+
+
+/*images on the left*/
+.background {
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.img2 {
+    height: 100vh;
+    max-width: 100%;
+    position: relative;
+}
+
+.logo{
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.4);
+    top: 15%;
+    width: 100%;
+}
+
+#img1 {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    top: 15%;
+    left: 30%;
+}
+
+.author {
+    position: absolute;
+    bottom: 5px;
+    left: 37%;
+    color: white;
+    font-size: 15px;
+}
+
+.author a {
+    color: white;
 }
 
 
-button{
-	background: #596D48;
+
+/*Form*/
+.form-section{
+    flex-grow: 1;
+    background-color: rgb(182, 182, 182);
+    max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+/*header text*/
+.header{
+    display: flex;
+    height: 20vh;
+    padding-top: 100px;
+}
+
+.header-content{
+    display: inherit;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: var(--universal_padding--);
+}
+
+
+/* form with inputs and all*/
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+form > .colored>.sections > .section{
+    display: inherit;
+    flex-direction: column;
+}
+
+.colored{
+    background-color: white;
+    padding: var(--universal_padding--);
+}
+
+.section {
+    display: inherit;
+    gap: 10px;
+}
+
+.sections{
+    display: flex;
+    flex-direction: row;
+    gap: 5vw;
+ }
+
+
+/*BUTTONS*/
+#btnSubmit{
+    margin: 0;
+    border: 0;
+    border-radius: 5px;
+    margin-left: var(--universal_padding--) ;
+    width: 200px;
+    height: 50px;
+    background-color: #596D48;
+    color: white;
+    font-size: 20px;
+}
+
+#btnSubmit:hover{
+    cursor: grab
+}
+
+#btnSubmit:active{
+    cursor: pointer;
+    box-shadow: 5px 5px 5px black;
+}
+
+#specialheader{
+    padding-top: 20px;
+}
+
+
+/*INPUT FIELDS*/
+input{
+    height: 30px;
+    width: 260px;
+    border-radius: 5px;
+    outline: gray;
+    outline-width: 1px;
+}
+input:focus{
+    outline: none;
+    box-shadow: 5px 5px 5px  rgb(133, 131, 131);
+}
+
+#password:valid{
+    border:3px solid #596D48;
+}
+
+#password:invalid,
+#password-again{
+    border:3px solid #c41212;
+}
+
+.account{
+    padding-left: var(--universal_padding--);
 }
